Fixed Overlap with of Main-Container

--- a/myPortfolio/src/dashboard-style.css
+++ b/myPortfolio/src/dashboard-style.css
@@ -57,6 +57,7 @@ body {
     width: 100%;
     height: auto;
     margin-bottom: 10px;
+    box-sizing: border-box;
     grid-gap: 20px;
     padding: .2rem;
     font-size: 1.3em;
@@ -342,8 +343,6 @@ body {
 
     .main-container {
       margin-block-end: 0em;
-      position: relative;
-      right: 3em;
       padding: 0em 1em;
     }
 
@@ -356,7 +355,12 @@ body {
       display: flex;
       margin: .5em 0em;
     }
+  }
 
-
+  @media (min-width: 1200px) {
+    .main-container {
+      position: relative;
+      right: 1.5em;
+    }
   }
 
